--- a/Kotomi/Kotomi/Views/LibraryView.axaml
+++ b/Kotomi/Kotomi/Views/LibraryView.axaml
@@ -6,5 +6,5 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Kotomi.Views.LibraryView"
              x:DataType="vm:LibraryViewModel">
-  <Button Command="{Binding SwitchToReaderView}">Switch to Reader</Button>
+  <Button Click="Button_Click">Switch to Reader</Button>
 </UserControl>
