--- a/Kotomi/Kotomi/Views/ReaderView.axaml
+++ b/Kotomi/Kotomi/Views/ReaderView.axaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:Kotomi.ViewModels;assembly=Kotomi"
+             xmlns:ms="clr-namespace:Kotomi.Models.Series;assembly=Kotomi"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Kotomi.Views.ReaderView" Background="{DynamicResource BackgroundColor}"
              x:DataType="vm:ReaderViewModel">
@@ -11,15 +12,44 @@
       <DockPanel Margin="{Binding MainView.SafeAreaLeftTopRight}" LastChildFill="False">
         <Button Margin="5" DockPanel.Dock="Left" Command="{Binding SwitchToLibraryView}">Library</Button>
         <StackPanel DockPanel.Dock="Left" Margin="5" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-          <TextBlock Text="{Binding Series.Title}" FontWeight="Bold" TextTrimming="CharacterEllipsis"/>
-          <TextBlock Margin="10,0,0,0" Text="Chapter"/>
-          <TextBlock Margin="5,0,0,0" Text="{Binding Chapter}"/>
-          <TextBlock Margin="10,0,0,0" Text="Page"/>
-          <TextBlock Margin="5,0,0,0" Text="{Binding Page}"/>
-          <TextBlock Margin="5,0,0,0" Text="/"/>
-          <TextBlock Margin="5,0,0,0" Text="{Binding CurrentChapter.TotalPages}"/>
+          <TextBlock Margin="10,0,0,0" Text="Chapter" VerticalAlignment="Center"/>
+          <TextBlock Margin="5,0,0,0" Text="{Binding Chapter}" VerticalAlignment="Center"/>
+          <TextBlock Margin="10,0,0,0" Text="Page" VerticalAlignment="Center"/>
+          <TextBlock Margin="5,0,0,0" Text="{Binding Page}" VerticalAlignment="Center"/>
+          <TextBlock Margin="5,0,0,0" Text="/" VerticalAlignment="Center"/>
+          <TextBlock Margin="5,0,0,0" Text="{Binding CurrentChapter.TotalPages}" VerticalAlignment="Center"/>
         </StackPanel>
-        <Button Margin="5" DockPanel.Dock="Right">Settings</Button>
+        <Button Margin="5" DockPanel.Dock="Right" Content="Menu">
+          <Button.Flyout>
+            <Flyout>
+              <StackPanel>
+                <TextBlock Text="Chapter" FontWeight="Bold"/>
+                <ComboBox ItemsSource="{Binding Series.Chapters}" SelectedIndex="{Binding SelectedChapterIndex}">
+                  <ComboBox.ItemTemplate>
+                    <DataTemplate DataType="ms:FolderChapter">
+                      <TextBlock Text="{Binding Title}" VerticalAlignment="Center"/>
+                    </DataTemplate>
+                  </ComboBox.ItemTemplate>
+                </ComboBox>
+                <TextBlock Text="Reading Mode" FontWeight="Bold"/>
+                <RadioButton>Single page</RadioButton>
+                <RadioButton>Two pages</RadioButton>
+                <RadioButton>Long strip</RadioButton>
+
+                <TextBlock Text="Reading Direction" FontWeight="Bold"/>
+                <RadioButton>Left to right</RadioButton>
+                <RadioButton>Right to left</RadioButton>
+
+                <TextBlock Text="Image Fit" FontWeight="Bold"/>
+                <RadioButton>Fit height</RadioButton>
+                <RadioButton>Fit width</RadioButton>
+                <RadioButton>Don't scale</RadioButton>
+
+                <Button Content="Enter immersive mode"/>
+              </StackPanel>
+            </Flyout>
+          </Button.Flyout>
+        </Button>
       </DockPanel>
     </Panel>
     <Panel Background="{DynamicResource BackgroundColor}">
@@ -34,8 +64,8 @@
       </TransitioningContentControl>
 
       <Grid ColumnDefinitions="0.5*,0.5*">
-        <Button Grid.Column="0" Command="{Binding PageLeft}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0"/>
-        <Button Grid.Column="1" Command="{Binding PageRight}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0"/>
+        <Button Grid.Column="0" Command="{Binding PageLeft}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="Left"/>
+        <Button Grid.Column="1" Command="{Binding PageRight}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="Right"/>
       </Grid>
     </Panel>
   </DockPanel>
