--- a/Kotomi/Kotomi/Views/ReaderView.axaml
+++ b/Kotomi/Kotomi/Views/ReaderView.axaml
@@ -63,7 +63,9 @@
         <Button Grid.Column="0" Command="{Binding PageLeft}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="Left" IsVisible="{Binding !ReadingModeLong}"/>
         <Button Grid.Column="1" Command="{Binding ShowHideMenuBar}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="F11" IsVisible="{Binding !ReadingModeLong}"/>
         <Button Grid.Column="2" Command="{Binding PageRight}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="Right" IsVisible="{Binding !ReadingModeLong}"/>
-        <Button Grid.Column="2" Command="{Binding ShowHideMenuBar}" Content="Show/hide menu" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" Opacity="0.25" IsVisible="{Binding ReadingModeLong}"/>
+        <Panel Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="{Binding MainView.SafeAreaTopRight}" IsVisible="{Binding ReadingModeLong}">
+          <Button Command="{Binding ShowHideMenuBar}" Content="Show/hide menu" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" Opacity="0.25"/>
+        </Panel>
       </Grid>
     </Panel>
   </DockPanel>
