--- a/Kotomi/Kotomi/Views/LibraryView.axaml
+++ b/Kotomi/Kotomi/Views/LibraryView.axaml
@@ -6,5 +6,19 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Kotomi.Views.LibraryView"
              x:DataType="vm:LibraryViewModel">
-  <Button Click="Button_Click">Switch to Reader</Button>
+  <StackPanel Margin="{Binding MainView.SafeArea}" Spacing="5">
+    <ListBox ItemsSource="{Binding AllSeries}" SelectedItem="{Binding SelectedSeries}">
+      <ListBox.ItemTemplate>
+        <DataTemplate>
+          <StackPanel Spacing="2">
+            <TextBlock Text="{Binding Title}" FontWeight="Bold"/>
+          </StackPanel>
+        </DataTemplate>
+      </ListBox.ItemTemplate>
+    </ListBox>
+
+    <Button Command="{Binding OpenSelectedSeries}">Open selected series</Button>
+    <Button Command="{Binding UpdateLibrary}">Update library</Button>
+    <Button Click="Button_Click">Add to library</Button>
+  </StackPanel>
 </UserControl>
