--- a/Kotomi/Kotomi/Views/LibraryView.axaml
+++ b/Kotomi/Kotomi/Views/LibraryView.axaml
@@ -12,32 +12,29 @@
 
   <ScrollViewer>
       <StackPanel>
-        <Border Background="{DynamicResource ForegroundColor}">
-          <Panel Margin="{Binding MainView.SafeAreaLeftTopRight}">
-             <TextBlock Text="Library" FontSize="32" FontWeight="Bold" Margin="10"/>
-          </Panel>
-        </Border>
         <Border Background="{DynamicResource SecondaryColor}">
-          <StackPanel Margin="10">
-            <TextBlock Text="Reading Now" FontSize="22" FontWeight="Bold"/>
-            <ItemsControl ItemsSource="{Binding AllSeries}" Margin="0,10,0,0">
-              <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                  <Button Command="{Binding Open}">
-                    <StackPanel Spacing="2" Width="200">
-                      <Image Source="{Binding Cover, Converter={StaticResource byteArrayToBitmapConverter}}"/>
-                      <TextBlock Text="{Binding Title}" FontSize="12" TextWrapping="Wrap"/>
-                    </StackPanel>
-                  </Button>
-                </DataTemplate>
-              </ItemsControl.ItemTemplate>
-              <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                  <WrapPanel/>
-                </ItemsPanelTemplate>
-              </ItemsControl.ItemsPanel>
-            </ItemsControl>
-          </StackPanel>
+           <Panel Margin="10">
+            <StackPanel Margin="{Binding MainView.SafeAreaLeftTopRight}">
+                <TextBlock Text="Recent" FontSize="22" FontWeight="Bold"/>
+                <ItemsControl ItemsSource="{Binding AllSeries}" Margin="0,10,0,0">
+                  <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                      <Button Command="{Binding Open}">
+                        <StackPanel Spacing="2" Width="200">
+                          <Image Source="{Binding Cover, Converter={StaticResource byteArrayToBitmapConverter}}"/>
+                          <TextBlock Text="{Binding Title}" FontSize="12" TextWrapping="Wrap"/>
+                        </StackPanel>
+                      </Button>
+                    </DataTemplate>
+                  </ItemsControl.ItemTemplate>
+                  <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                      <WrapPanel/>
+                    </ItemsPanelTemplate>
+                  </ItemsControl.ItemsPanel>
+                </ItemsControl>
+            </StackPanel>
+           </Panel>
         </Border>
         <ItemsControl ItemsSource="{Binding AllSeries}" Margin="10">
           <ItemsControl.ItemTemplate>
