--- a/Kotomi/Kotomi/Views/ReaderView.axaml
+++ b/Kotomi/Kotomi/Views/ReaderView.axaml
@@ -20,6 +20,8 @@
           
           <TextBlock Margin="10,0,0,0" Text="Page" VerticalAlignment="Center" IsVisible="{Binding !ReadingModeLong}"/>
           <TextBlock Margin="5,0,0,0" Text="{Binding Page}" VerticalAlignment="Center" IsVisible="{Binding !ReadingModeLong}"/>
+          <TextBlock Text="-" VerticalAlignment="Center" IsVisible="{Binding ReadingModeTwo}"/>
+          <TextBlock Text="{Binding SecondPage}" VerticalAlignment="Center" IsVisible="{Binding ReadingModeTwo}"/>
           <TextBlock Margin="5,0,0,0" Text="/" VerticalAlignment="Center" IsVisible="{Binding !ReadingModeLong}"/>
           <TextBlock Margin="5,0,0,0" Text="{Binding CurrentChapter.TotalPages}" VerticalAlignment="Center" IsVisible="{Binding !ReadingModeLong}"/>
         </StackPanel>
@@ -39,7 +41,9 @@
                 <RadioButton GroupName="ReadingMode" IsChecked="{Binding ReadingModeSingle}">Single page</RadioButton>
                 <RadioButton GroupName="ReadingMode" IsChecked="{Binding ReadingModeTwo}">Two pages</RadioButton>
                 <RadioButton GroupName="ReadingMode" IsChecked="{Binding ReadingModeLong}">Long strip</RadioButton>
-
+                <TextBlock Text="Long strip margin" IsVisible="{Binding ReadingModeLong}"/>
+                <Slider Value="{Binding ReadingModeLongMargin}" Minimum="0" Maximum="1000" ToolTip.Tip="{Binding ReadingModeLongMargin}" IsVisible="{Binding ReadingModeLong}"/>
+                
                 <TextBlock Margin="0,10,0,0" Text="Reading Direction" FontWeight="Bold"/>
                 <RadioButton GroupName="ReadingDirection" IsChecked="{Binding ReadingDirectionLeftToRight}">Left to right</RadioButton>
                 <RadioButton GroupName="ReadingDirection" IsChecked="{Binding ReadingDirectionRightToLeft}">Right to left</RadioButton>
@@ -67,8 +71,10 @@
         <Button Grid.Column="0" Command="{Binding PageLeft}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="Left" IsVisible="{Binding !ReadingModeLong}"/>
         <Button Grid.Column="1" Command="{Binding ShowHideMenuBar}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="F11" IsVisible="{Binding !ReadingModeLong}"/>
         <Button Grid.Column="2" Command="{Binding PageRight}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="Right" IsVisible="{Binding !ReadingModeLong}"/>
-        <Panel Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="{Binding MainView.SafeAreaTopRight}" IsVisible="{Binding ReadingModeLong}">
+        <Panel Grid.ColumnSpan="3" Margin="{Binding MainView.SafeArea}" IsVisible="{Binding ReadingModeLong}">
           <Button Command="{Binding ShowHideMenuBar}" Content="Show/hide menu" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" Opacity="0.25"/>
+          <Button Command="{Binding PageLeft}" Content="&lt;&lt;&lt;" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10" Opacity="0.25"/>
+          <Button Command="{Binding PageRight}" Content=">>>" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10" Opacity="0.25"/>
         </Panel>
       </Grid>
     </Panel>
