--- a/Kotomi/Kotomi/Views/ReaderView.axaml
+++ b/Kotomi/Kotomi/Views/ReaderView.axaml
@@ -68,10 +68,10 @@
       </TransitioningContentControl>
 
       <Grid ColumnDefinitions="*,*,*">
-        <Button Grid.Column="0" Command="{Binding PageLeft}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="Left" IsVisible="{Binding !ReadingModeLong}"/>
-        <Button Grid.Column="1" Command="{Binding ShowHideMenuBar}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="F11" IsVisible="{Binding !ReadingModeLong}"/>
-        <Button Grid.Column="2" Command="{Binding PageRight}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="Right" IsVisible="{Binding !ReadingModeLong}"/>
-        <Panel Grid.ColumnSpan="3" Margin="{Binding MainView.SafeArea}" IsVisible="{Binding ReadingModeLong}">
+        <Button Grid.Column="0" Command="{Binding PageLeft}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="Left" IsVisible="{Binding !ShowAlternativeControls}"/>
+        <Button Grid.Column="1" Command="{Binding ShowHideMenuBar}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="F11" IsVisible="{Binding !ShowAlternativeControls}"/>
+        <Button Grid.Column="2" Command="{Binding PageRight}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0" HotKey="Right" IsVisible="{Binding !ShowAlternativeControls}"/>
+        <Panel Grid.ColumnSpan="3" Margin="{Binding MainView.SafeArea}" IsVisible="{Binding ShowAlternativeControls}">
           <Button Command="{Binding ShowHideMenuBar}" Content="Show/hide menu" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" Opacity="0.25"/>
           <Button Command="{Binding PageLeft}" Content="&lt;&lt;&lt;" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10" Opacity="0.25"/>
           <Button Command="{Binding PageRight}" Content=">>>" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10" Opacity="0.25"/>
