--- a/Kotomi/Kotomi/Views/BookInfoView.axaml
+++ b/Kotomi/Kotomi/Views/BookInfoView.axaml
@@ -51,7 +51,7 @@
             <TextBlock Text="Source" FontSize="18" FontWeight="Bold"/>
             <TextBlock Margin="0,0,0,10" Text="{Binding Source}"/>
           </StackPanel>
-
+          
           <StackPanel Margin="20,0,0,0">
             <ItemsControl ItemsSource="{Binding AllChapters}">
               <ItemsControl.ItemTemplate>
@@ -61,6 +61,11 @@
                   </Button>
                 </DataTemplate>
               </ItemsControl.ItemTemplate>
+              <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                  <VirtualizingStackPanel/>
+                </ItemsPanelTemplate>
+              </ItemsControl.ItemsPanel>
             </ItemsControl>
           </StackPanel>
         </DockPanel>
