--- a/Kotomi/Kotomi/Views/MainWindow.axaml
+++ b/Kotomi/Kotomi/Views/MainWindow.axaml
@@ -6,7 +6,7 @@
         xmlns:views="clr-namespace:Kotomi.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Kotomi.Views.MainWindow"
-        Icon="/Assets/avalonia-logo.ico"
+        Icon="/Assets/icon.ico"
         Title="Kotomi">
         <views:MainView />
 </Window>
